2004-12-07  Mike Kestner  <mkestner@novell.com>

	* */*.cs : s/glue-2.0/glue-2 so that dllimport works on win32.
	* */*.custom : s/glue-2.0/glue-2
	* */glue/makefile.win32 : s/glue-2.0/glue-2
	* */glue/Makefile.am : s/glue-2.0/glue-2

2004-12-06  John Luke  <john.luke@gmail.com>

	* gtk/Gtk.metadata: set with_mnemonic as the preferred ctor
	* doc/en/Gtk/Expander.xml: update

2004-12-06  John Luke  <john.luke@gmail.com>

	* gtk/Action.custom
	* gtk/ActionGroup.custom
	* gtk/UIManager.custom
	* gtk/Gtk.metadata
	* doc/en/Gtk/ActionGroup.xml
	* file doc/en/Gtk/Action.xml
	* doc/en/Gtk/UIManager.xml: replace List and SList with arrays
	and update the docs

2004-12-06  Mike Kestner  <mkestner@novell.com>

	* generator/SymbolTable.cs : add off_t as an IntPtr.

2004-12-06  Mike Kestner  <mkestner@novell.com>

	* generator/SignalHandler.cs : s/[]/Array in BaseName. [Fixes #69383]

2004-12-06  Mike Kestner  <mkestner@novell.com>

	* doc/en/*/*.xml : docs for new GValue members and size_t changes.
	* generator/SymbolTable.cs : add ssize_t and make size_t a UIntPtr
	instead of the current broken int mapping on 64 bit platforms.
	* gtkhtml/HTMLStream.custom : fix size_t related overload.
	[fixes #69574]

2004-12-03  Dan Winship  <danw@novell.com>

	* gdk/gdk-symbols.xml: alias GdkBitmap to GdkPixmap [Fixes #68824]

	* gdk/Gdk.metadata: Remove the earlier GdkBitmap hack now that
	it's aliased. Also move Gdk.Bitmap.CreateFromData to
	Gdk.Pixmap.CreateBitmapFromData

	* gdk/Pixbuf.custom (RenderPixmapAndMask,
	RenderPixmapAndMaskForColormap, RenderThresholdAlpha):
	s/Bitmap/Pixmap/

	* sample/GtkDemo/DemoTextView.cs: uncomment the fg/bg stipple
	code, since that works now

	* parser/gapi-fixup.cs: Add an "add-node" rule. This turned out to
	not actually be needed for this fix, but we know we'll need it
	later, so here it is.

2004-12-03  Jorge Garcia <jgarcia@ac.upc.es>

	* glib/Type.cs:          add Int64 and UInt64 support.