@@ -67,6 +67,8 @@ GdkColor *gtksharp_gtk_style_get_fg (GtkStyle *style, int i);
 
 GdkColor *gtksharp_gtk_style_get_bg (GtkStyle *style, int i);
 
+GdkColor *gtksharp_gtk_style_get_mid (GtkStyle *style, int i);
+
 GdkColor *gtksharp_gtk_style_get_text (GtkStyle *style, int i);
 
 GdkColor *gtksharp_gtk_style_get_base (GtkStyle *style, int i);
@@ -227,6 +229,12 @@ GdkColor*
 gtksharp_gtk_style_get_mid (GtkStyle *style, int i)
 {
 	return &style->mid[i];
+}
+
+GdkColor*
+gtksharp_gtk_style_get_text (GtkStyle *style, int i)
+{
+	return &style->text[i];
 }
 
 GdkColor*
