@@ -1,5 +1,9 @@
 2004-12-07  Mike Kestner  <mkestner@novell.com>
 
+	* gtk/glue/style.c : add missing method and prototype. [Fixes #70216]
+
+2004-12-07  Mike Kestner  <mkestner@novell.com>
+
 	* */*.cs : s/glue-2.0/glue-2 so that dllimport works on win32.
 	* */*.custom : s/glue-2.0/glue-2
 	* */glue/makefile.win32 : s/glue-2.0/glue-2
